--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "postcss": "^8.4.28",
-    "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^9.1.1",
-    "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
   "name": "alb-portfolio",
   "description": "Wecome to my personal and professional interactive portfolio! This website showcases my projects, skills, and experiences as a software engineer. Whether you're a potential employer, client, or just a curious visitor, I hope you find this portfolio informative and engaging.",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/addielb/alb-portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/addielb/alb-portfolio/issues"
+  },
+  "homepage": "https://github.com/addielb/alb-portfolio#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --watch",
+    "start": "nodemon ./server/index.js",
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+  },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
@@ -97,20 +100,18 @@
     "wrappy": "^1.0.2",
     "yaml": "^2.3.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch",
-    "start": "nodemon ./server/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/addielb/alb-portfolio.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/addielb/alb-portfolio/issues"
-  },
-  "homepage": "https://github.com/addielb/alb-portfolio#readme"
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "postcss": "^8.4.29",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.2",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
