--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "jiti": "^1.19.3",
     "lilconfig": "^2.1.0",
     "lines-and-columns": "^1.2.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.5",
     "minimatch": "^3.1.2",
@@ -84,11 +86,13 @@
     "queue-microtask": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
     "resolve": "^1.22.4",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
+    "sort-by": "^1.2.0",
     "source-map-js": "^1.0.2",
     "sucrase": "^3.34.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
