--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "homepage": "https://github.com/addielb/alb-portfolio#readme",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --watch",
     "start": "nodemon ./server/index.js",
-    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.10",
