--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "@babel/preset-env": "^7.22.10",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.29",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.2",
