--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "any-promise": "^1.3.0",
     "anymatch": "^3.1.3",
     "arg": "^5.0.2",
